add book-list, book-detail and book-form components.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,9 @@
 
 <div class="container">
   <div class="jumbotron">
-    Components will go there
+    <bs-book-form></bs-book-form>
+    <bs-book-detail></bs-book-detail>
+    <bs-book-list></bs-book-list>
   </div>
 </div>
 
