--- a/src/app/book-list/book-list.component.html
+++ b/src/app/book-list/book-list.component.html
@@ -1,7 +1,7 @@
 <h2>Lists all the books - {{nbBooks}} </h2>
 <ul class="list-unstyled">
   <li class="media my-4" *ngFor="let book of books">
-    <img class="d-flex mr-3 img-thumbnail" src="{{book.imageURL}}">
+    <img class="d-flex mr-3 img-thumbnail" src="{{book.imageUrl}}">
     <div>
       <h5 class="mt-0 mb-1"><a [routerLink]="['/book-detail',book.id]">{{book.title}}</a></h5>
       {{book.description}}
